# Meinewelt---Strehl

./: .gitignore  CLAUDE.md  DEPLOY.md  README.md  SPEC.md  pyproject.toml  requirements.txt  run_workspace.py  streamlit_app.py
aowfs/: __init__.py  config.py  geometry.py  optics.py  pipeline.py  types.py
aowfs/actuator/: __init__.py  actuator_map.py  influence_matrix.py
aowfs/bench/: __init__.py  benchmark.py
aowfs/io/: __init__.py  aot_loader.py  isro_loader.py  synthetic_loader.py
aowfs/predict/: __init__.py  ar_predictor.py  evaluate.py
aowfs/recon/: __init__.py  centroiding.py  fast_centroid.py  ml.py  modal.py  zernike.py  zonal.py
aowfs/sim/: __init__.py  generate.py  phase_screen.py  shwfs.py  validate.py
aowfs/turbulence/: __init__.py  characterize.py  r0_estimator.py  tau0_estimator.py
aowfs/viz/: __init__.py  app.py  replay.py
configs/: default.yaml  isro_specs_template.yaml
docs/: phase10_notes.md  phase8_r0_multiseed.py  phase8_review_notes.md  phase9_ml_compare.py  phase9_notes.md
documents/: ~$Meinewelt-Strehl_PS9_Idea_Submission.pptx
landing/: index.html
tests/: test_phase0_simulator.py  test_phase10_aot.py  test_phase1_centroiding.py  test_phase2_reconstruction.py  test_phase3_turbulence.py  test_phase4_prediction.py  test_phase5_actuator.py  test_phase6_pipeline.py  test_phase7_isro_adapter.py  test_phase9_ml.py
