[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aowfs"
version = "0.1.0"
description = "Predictive adaptive-optics wavefront reconstruction and turbulence characterization from Shack-Hartmann WFS time-series data (BAH 2026 PS9)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "PRL AO / BAH 2026 PS9 team" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "aotools>=1.0.7",
    "numba>=0.59",
    "Pillow>=10.0",
    "matplotlib>=3.8",
    "streamlit>=1.30",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["aowfs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"
